synthv1 - an old-school polyphonic synthesizer
----------------------------------------------

ChangeLog


1.3.2  2025-05-20  A Mid-Spring'25 Release.

- Stepping up next development cycle (Qt >= 6.9)


1.3.1  2025-04-03  An Early Spring'25 Release.

- Fixed command line parsing (QCommandLineParser/Option) to not
  exiting the application with a segfault when showing help and
  version information.


1.3.0  2025-01-16  A New-Year'25 Release.

- Just another Vee-One's release for the New Year...


1.2.0  2024-12-15  An End-of-Year'24 Release.

- Configure/Tuning: fixed initial scale and keyboard map tooltips.


1.1.3  2024-10-31  A Halloween'24 Release.

- Prepping up next development cycle (Qt >= 6.8)


1.1.2  2024-10-02  An Early-Fall'24 Release.

- Configure: disable widget style option on LV2 plug-ins only,
  for which it wasn't working on the JACK stand-alones either.


1.1.1  2024-09-20  An End-ofSummer'24 Release.

- NSM: prevent loading any preset(s) given on command line.


1.1.0  2024-08-28  A Mid-Summer'24 Release.

- LV2 Plug-in Control Input Port-Change Request extension is not
  tagged experimental anymore.


1.0.0  2024-06-20  An Unthinkable Release.

- Making up the unthinkable (aka. v1.0.0)


0.9.91  2024-05-02  A Spring'24 Release Candidate 2.

- Prepping the unthinkable (aka. v1.0.0-rc2)
- Updated to latest framework level (Qt >= 6.7)


0.9.90  2024-04-11  A Spring'24 Release Candidate.

- Prepping the unthinkable (aka. v1.0.0-rc1)
- Custom color themes are now file based (*.conf); legacy still
  preserved ntl.
- Fixed the build checks on whether to use old or newer style of
  LV2 include headers.


0.9.34  2024-01-26  A Winter'24 Release.

- Added build checks on whether to use old or newer style of LV2
  include headers.
- LV2 plugin Control Input Port-change request extension feature
  support added.
- Updated copyright headers into the New Year (2024).


0.9.33  2023-12-20  An End-of-Autumn'23 Release.
